test/tasty/neg/src-2/TestFooMatch.check
TestFooMatch_fail.scala:5: warning: match may not be exhaustive.
It would fail on the following input: Foo()
  def foo(f: Foo): Unit = f match {
                          ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
